--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,4 +17,5 @@ jobs:
      uses: astronomer/deploy-action@v0.2
      with:
       action: create-deployment-preview
-      deployment-id: clqngd12632891lqzzy2pd6iz1
+      ##deployment-id: clqngd12632891lqzzy2pd6iz1
+      deployment-name: Github-Actions-Test
