--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,6 +4,10 @@ on:
  push:
   branches:
    - "**"
+ pull_request:
+  types: [opened, synchronize, edited, ready_for_review]
+  branches:
+   main
 
 env:
 ## Set your API token as a GitHub secret
