--- a/.github/workflows/deploy-to-preview.yml
+++ b/.github/workflows/deploy-to-preview.yml
@@ -1,6 +1,9 @@
 name: Astronomer CI - Deploy code to preview
 
 on:
+  push:
+    branches:
+      - "**"
   pull_request:
     branches:
       - main
