--- a/.github/workflows/test_tls_workflow.yaml
+++ b/.github/workflows/test_tls_workflow.yaml
@@ -14,8 +14,8 @@ jobs:
       - name: Setup environment
         shell: bash
         run: |
-          apt update \
-          && apt install curl unzip -y
+          sudo apt update \
+          && sudo apt install curl unzip -y
    
       - name: Create deployment
         shell: bash
