--- a/.github/workflows/test_tls_workflow.yaml
+++ b/.github/workflows/test_tls_workflow.yaml
@@ -20,9 +20,10 @@ jobs:
       - name: Create deployment
         shell: bash
         run: |
-          sudo curl -sSL https://install.astronomer.io | bash -s \
+          curl -sSL https://install.astronomer.io | bash -s \
+          sudo chmod +x /usr/local/bin/astro \
           
-          sudo astro version
+          sudo astro version \
 
           sudo echo "Listing workspaces..." \
           date \
