--- a/.github/workflows/test_tls_workflow.yaml
+++ b/.github/workflows/test_tls_workflow.yaml
@@ -21,8 +21,5 @@ jobs:
         shell: bash
         run: |
           curl -sSL https://install.astronomer.io | bash -s
+          export PATH="$HOME/.astro/bin:$PATH"  # Add Astronomer CLI to PATH
           astro version  # Verify installation
-
-      - name: List files
-        run: |
-          ls -lrth
