--- a/.github/workflows/test_tls_workflow.yaml
+++ b/.github/workflows/test_tls_workflow.yaml
@@ -22,3 +22,7 @@ jobs:
         run: |
           DOWNLOADER="https://raw.githubusercontent.com/astronomer/astro-cli/main/godownloader.sh"
           curl -sL -o- ${DOWNLOADER} | bash -s -- -b /usr/local/bin "$TAG"
+          echo "Listing workspaces..."
+          date
+          astro workspace list --verbosity=debug
+          
