--- a/.github/workflows/AstronomerCICD.yaml
+++ b/.github/workflows/AstronomerCICD.yaml
@@ -1,8 +1,8 @@
 name: Astronomer CI - Deployment
 on:
-  release:
-    types: [ published ]
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - "**"
 
 env:
   RUN_PYTEST: false
